typo in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: theme: jekyll-theme-hacker
+theme: jekyll-theme-hacker
 title: ["Pratham Patel"]
 description: ["My own GitHub hosted website"]
 show_downloads: ["true"]
