mostly removed lines with comments and TABS OVER SPACES!!!!

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
 theme: jekyll-theme-hacker
 title: ["Pratham Patel"]
-description: ["My own GitHub hosted website"]
-show_downloads: ["true"]
+description: ["Mostly about setting up my machine(s) after an OS reinstall"]
